--- a/.env
+++ b/.env
@@ -37,5 +37,6 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=null://null
+MAILER_DSN=smtp://your_gmail_username:your_gmail_password@smtp.gmail.com:587   
+
 ###< symfony/mailer ###
