--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,23 +1,14 @@
-# config/services.yaml
 parameters:
 
 services:
     _defaults:
-        autowire: true      # Dependencies automatisch injizieren
-        autoconfigure: true # Services automatisch registrieren (z.B. EventListener)
-        bind:
-            $projectDir: '%kernel.project_dir%'
+        autowire: true
+        autoconfigure: true
 
  
-    App\EventListener\LogoutSuccessListener:
-        tags:
-            - { name: kernel.event_listener, event: Symfony\Component\Security\Http\Event\LogoutEvent, method: onLogoutSuccess }
-
     App\:
         resource: '../src/'
         exclude:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
-
-  
