--- a/.env
+++ b/.env
@@ -28,7 +28,8 @@ APP_SECRET=
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 
 DATABASE_URL="mysql://root:@127.0.0.1:3306/mealitup"
-
+# user@mealitup.com PW: user123
+# admin@mealitup.com   PW :  admin123  
 
 ###< doctrine/doctrine-bundle ###
 
