--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,17 +16,18 @@ security:
         main:
             lazy: true
             provider: app_user_provider
-            form_login:
-                login_path: app_login
-                check_path: app_login
-              
+            custom_authenticator: App\Security\LoginSuccessHandler
             logout:
                 path: app_logout
-                target: app_index  
+                target: app_index
+                invalidate_session: true
 
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/profile, roles: ROLE_USER }
-        - { path: ^/login, roles: PUBLIC_ACCESS }
+        - { path: ^/mealplan, roles: ROLE_USER }
+        - { path: ^/shoppinglist, roles: ROLE_USER }
+        - { path: ^/recipe, roles: ROLE_USER }
         - { path: ^/register, roles: PUBLIC_ACCESS }
+        - { path: ^/login, roles: PUBLIC_ACCESS }
         - { path: ^/, roles: PUBLIC_ACCESS }
