--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,33 +1,33 @@
 security:
-    password_hashers:
-        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+  password_hashers:
+    Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: "auto"
 
-    providers:
-        app_user_provider:
-            entity:
-                class: App\Entity\User
-                property: email
+  providers:
+    app_user_provider:
+      entity:
+        class: App\Entity\User
+        property: email
 
-    firewalls:
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
+  firewalls:
+    dev:
+      pattern: ^/(_(profiler|wdt)|css|images|js)/
+      security: false
 
-        main:
-            lazy: true
-            provider: app_user_provider
-            custom_authenticator: App\Security\LoginSuccessHandler
-            logout:
-                path: app_logout
-                target: app_index
-                invalidate_session: true
+    main:
+      lazy: true
+      provider: app_user_provider
+      custom_authenticator: App\Security\LoginSuccessHandler
+      logout:
+        path: app_logout
+        target: app_home
+        invalidate_session: true
 
-    access_control:
-        - { path: ^/admin, roles: ROLE_ADMIN }
-        - { path: ^/profile, roles: ROLE_USER }
-        - { path: ^/mealplan, roles: ROLE_USER }
-        - { path: ^/shoppinglist, roles: ROLE_USER }
-        - { path: ^/recipe, roles: ROLE_USER }
-        - { path: ^/register, roles: PUBLIC_ACCESS }
-        - { path: ^/login, roles: PUBLIC_ACCESS }
-        - { path: ^/, roles: PUBLIC_ACCESS }
+  access_control:
+    - { path: ^/admin, roles: ROLE_ADMIN }
+    - { path: ^/profile, roles: ROLE_USER }
+    - { path: ^/mealplan, roles: ROLE_USER }
+    - { path: ^/shoppinglist, roles: ROLE_USER }
+    - { path: ^/recipe, roles: ROLE_USER }
+    - { path: ^/register, roles: PUBLIC_ACCESS }
+    - { path: ^/login, roles: PUBLIC_ACCESS }
+    - { path: ^/, roles: PUBLIC_ACCESS }
