--- a/.env
+++ b/.env
@@ -27,8 +27,8 @@ APP_SECRET=
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 
-DATABASE_URL="mysql://root:@127.0.0.1:3306/mealitup"
-
+DATABASE_URL="mysql://root:root@127.0.0.1:3306/mealitup"
+#DATABASE_URL="mysql://svetlanacodefact_mealitup:~o[Q)Y_VHDiz@127.0.0.1:3306/svetlanacodefact_final_project"
 
 ###< doctrine/doctrine-bundle ###
 
@@ -40,6 +40,8 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://your_gmail_username:your_gmail_password@smtp.gmail.com:587   
+MAILER_DSN=smtp://svetlana.shmeleva.1@gmail.com:myqknuzjxejabmmm@smtp.gmail.com:587  
 
-###< symfony/mailer ###
+
+
+
